# github-mastery-x

./: .env.example  .env.test  .eslintignore  .eslintrc.js  .eslintrc.json  .gitattributes  .gitflow-ai.yml  .gitignore  .gitignore-stealth  .prettierignore  .prettierrc  ANALYSIS_REPORT.json  BRANDBOOK.md  BRAND_GUIDELINES.md  CHANGELOG.md  CHANGELOG_GITFLOW.md  CI_CD_ANALYSIS.md  CI_CD_DIAGNOSIS.md  COMMIT_PLAN.md  CONTENT_CALENDAR.md  CONTENT_STRATEGY.md  CONTRIBUTING.md  DEMOCRATIZING_GITHUB_SUCCESS.md  DESENVOLVIMENTO.md  DOCUMENTATION_INDEX.json  ECOSYSTEM_INTEGRATION.md  GIDEN_ADAPTIVE_DEVELOPER.js  GIDEN_INTEGRATION.md  GITHUB_DEVELOPER_STRATEGY.md  GITHUB_SETUP_GUIDE.md  GROWTH_QUICK_START.md  HOMEPAGE_IMPROVEMENTS.md  INTEGRATION_STATUS.md  INTEGRATION_STRATEGY.md  LANDING_PAGE.md  LICENSE  MCP_CONSOLIDATION.md  MODEL_ROUTING_RULES.md  Makefile  README.md  (+33 more)
.giden-docsync/: _patterns.json  metrics.json
.github/: pull_request_template.md
agents/: README.md  commands.js  github-agent.js  loader.js
api/: github-client.js  rest-adapter.js
blockchain/: payment-gateway.js
cli-tools/: gh-cli.js
docs/: AGENT_ARCHITECTURE_V2.md  BRANDBOOK.md  CI_CD_SETUP.md  CONTENT_CALENDAR.md  CORRECTIONS_REPORT.md  DEMOCRATIZING_GITHUB_SUCCESS.md  DESENVOLVIMENTO.md  EAP-resumo.md  EAP.md  ECOSYSTEM_INTEGRATION.md  GIDEN_INTEGRATION.md  GO_TO_MARKET_STRATEGY.md  GROWTH_QUICK_START.md  IMPROVEMENTS.md  LANDING_PAGE.md  (+15 more)
github-agent-core/: Cargo.toml
github-agent-core/benches/: git_operations.rs  github_api.rs
github-agent-core/src/: analyzer.rs  lib.rs  performance.rs
(+98 files in other folders)
