[package]
name = "github-agent-core"
version = "2.0.0"
edition = "2021"
authors = ["GitHub Mastery Team"]
description = "Ultra-fast GitHub automation engine"
license = "Proprietary"

[lib]
name = "github_agent_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
octocrab = "0.38"
git2 = "0.18"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
dashmap = "5.4"
parking_lot = "0.12"
rayon = "1.7"

# Criptografia e segurança
ring = "0.17"
base64 = "0.21"

# Performance
mimalloc = { version = "0.1", optional = true }

# Python integration
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[features]
default = ["mimalloc"]
python = ["pyo3"]

[[bench]]
name = "git_operations"
harness = false

[[bench]]
name = "github_api"
harness = false

